--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,28 +15,30 @@
   <body>
   
     <header>
-      <nav class= "main-nav">       
-        <div class="nav-left">
+      <nav class= "main-nav flex-row">       
+        <div class="nav-left flex-row flex">
         <% if current_user %>
           
-          <span class="profile-img"> 
+          <picture class="profile-img"> 
           <% if current_user.photo %>
-          <%= image_tag(current_user.photo, style: 'width:100%' ) %> 
+          <%= image_tag current_user.photo_url.to_s %> 
           <% end %>
-          </span>
+          </picture>
           <span class="username color-1 font-fam"> <%= link_to current_user.fullname, user_path(current_user) %> </span>
         <% else %>
           <span class="logo-text font-fam color-2 font-1p5">OPINION</span>
         <% end %>
         </div>
-        <div class="nav-middle">
-          <span class="logo"> </span>
+        <div class="nav-middle flex-row">
+          <span class="logo font-1"> 
+           <%= image_tag("flower-s.svg") %>
+          </span>
           <% if current_user %>
           <span class="logout font-fam"> <%= link_to 'Log Out', session_path(session), method: :delete %> </span>
           <% end %>       
         </div>
         
-        <div class="nav-right">
+        <div class="nav-right flex-row font-1p5">
         <% if current_user %>
           <span class="iconify" data-icon="fluent:edit-16-filled" data-inline="false"></span>
           <span class="iconify" data-icon="fluent:mail-24-filled" data-inline="false"></span>
