- Adds time of opinion post in the opinions section

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,6 +73,14 @@
     align-items: center;
     justify-content: center;
 }
+
+.space-between {
+    justify-content: space-between;
+}
+
+.w-100 {
+    width: 100%;
+}
  // body 
 
 //  body {
