-implemented toggle between menu sections using jquery script

--- a/app/views/layouts/_followers.html.erb
+++ b/app/views/layouts/_followers.html.erb
@@ -1,4 +1,4 @@
-<div  class="who-to-section flex-column flex">
+<div id="followers" class="who-to-section flex-column flex">
       
 
 <% @followers.each do |user| %>
