--- a/app/views/layouts/_followings.html.erb
+++ b/app/views/layouts/_followings.html.erb
@@ -1,4 +1,4 @@
-<div  class="flex-column flex">
+<div  id = "followings" class="flex-column flex">
 
 <% @followings.each do |user| %>
     <% unless user == @user %> 
