--- a/app/views/layouts/_frontmenu.html.erb
+++ b/app/views/layouts/_frontmenu.html.erb
@@ -1,6 +1,7 @@
 <div class="front-menu flex-row ">
-    <span class="menu-title font-fam flex-row flex">OPINIONS</span>
-    <span class="menu-title font-fam flex-row flex">FOLLOWING</span>
-    <span class="menu-title font-fam flex-row flex">FOLLOWERS</span>
-    <span class="menu-title font-fam flex-row flex">LISTS</span>
+
+    <span id="view-opinions" class="menu-title font-fam flex-row flex">OPINIONS</span>
+    <span id = "view-followings" class="menu-title font-fam flex-row flex">FOLLOWING</span>
+    <span id = "view-followers" class="menu-title font-fam flex-row flex">FOLLOWERS</span>
+    <span id = "view-lists" class="menu-title font-fam flex-row flex">LISTS</span>
 </div>
