--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,41 @@
     <% end %>
     
     <%= yield %>
+
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous">
+    </script>
+
+    <script>
+    $(document).ready(function(){
+
+      $('#view-followers').on('click', function() {
+        $('#followers').show()
+        $('#opinions-section').hide()        
+        $('#followings').hide()
+      });
+
+      $('#view-opinions').on('click', function() {
+        $('#opinions-section').show()
+        $('#followers').hide()
+        $('#followings').hide()
+      });
+
+     
+
+      $('#view-followings').on('click', function() {
+        $('#followings').show()
+        $('#opinions-section').hide()
+        $('#followers').hide()        
+      });
+        
+    });  
+      
+      
+    </script>
   
   </body>
+
 </html>
