- Adds following and followers action contollers for user view of followings and followers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,6 +81,16 @@
 .w-100 {
     width: 100%;
 }
+
+.hidden {
+    visibility: hidden;
+}
+
+.box {
+    width: 100%;
+    height: fit-content;
+    background-color: #F5F6F8;
+}
  // body 
 
 //  body {
