--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -12,7 +12,7 @@
   </picture>  
 
   <%= render './layouts/frontmenu'%>
-  <%= render './layouts/lists'%>
+  <%= render './layouts/followers'%>
   
   
 </section>
