--- a/app/views/layouts/_followings.html.erb
+++ b/app/views/layouts/_followings.html.erb
@@ -1,15 +1,16 @@
-<div  id = "followings" class="flex-column flex">
 
+<div   class="opinions-section flex flex-column  ">
+<span class="opinions-title font-fam"> FOLLOWINGS </span>
 <% @followings.each do |user| %>
     <% unless user == @user %> 
-    <article class="flex-row">
-     <div class="img-div">
+    <article class="opinion-story flex-row">
+     <div class="opinion-profile img-div">
       <% if user.photo %>
       <%= image_tag(user.photo_url.to_s) %> 
       <% end %>
      </div>
-     <div class = "who-to-body">
-        <div class="name-follow-wrapper flex-coumn">
+     <div class"opinion-body font-fam w-100">
+        <div class="flex-row space-between w-100">
          <h1> <%= link_to user.fullname, user_path(user) %> </h1>
          <p> @ <%= user.username %> </p>         
         </div>                      
