--- a/app/views/users/_lists.html.erb
+++ b/app/views/users/_lists.html.erb
@@ -1,26 +1,26 @@
+<div id="lists" class="opinions-section3 flex flex-column ">
+<span class="opinions-title3 font-fam"> LISTS </span>     
 
-<div   class="opinions-section flex flex-column  ">
-<span class="opinions-title font-fam"> FOLLOWERS </span>
-<% @followers.each do |user| %>
+<% @users.each do |user| %>
     <% unless user == @user %> 
-    <article class="opinion-story flex-row">
-     <div class="opinion-profile img-div">
+    <article class="opinion-story3 flex-row">
+     <div class="opinion-profile3 img-div">
       <% if user.photo %>
       <%= image_tag(user.photo_url.to_s) %> 
       <% end %>
      </div>
-     <div class"opinion-body font-fam w-100">
+     <div class = "opinion-body3 font-fam w-100">
         <div class="flex-row space-between w-100">
          <h1> <%= link_to user.fullname, user_path(user) %> </h1>
          <p> @ <%= user.username %> </p>         
         </div>                      
       </div>
       <% if current_user.follow?(user) %>
-        <a href="<%= follow_user_path(@user) %>">        
+        <a href= "<%= unfollow_user_path(@user) %>">        
           <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
         </a>
       <% else %>
-        <a href="<%= unfollow_user_path(@user) %>">
+        <a href= "<%= follow_user_path(@user) %>">
           <span class="iconify font-1p5" data-icon="carbon:add-alt" data-inline="false"></span>
         </a>
       <% end %>
@@ -29,5 +29,4 @@
     <% end %>
   <% end %>
 
-  </end> 
-
+  <div>
