- Fixes errors on following, followers and lists links implementations

--- a/app/views/layouts/_frontmenu.html.erb
+++ b/app/views/layouts/_frontmenu.html.erb
@@ -11,5 +11,7 @@
 </a>
 
 
+<a href="<%= users_path %>">
     <span id = "view-lists" class="menu-title font-fam flex-row flex">LISTS</span>
+</a>
 </div>
