--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -16,7 +16,7 @@
           <span> HOME </span>
         </li>
       </a>
-      <a href="<%= root_path %>" >
+      <a href="<%= users_path %>" >
         <li class="main-link-lists font-fam"> 
           <span class="iconify link-iconify" data-icon="feather:at-sign" data-inline="false"></span>
           <span> CONNECT </span> 
