--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -3,7 +3,14 @@
       <%= render './layouts/left' %>
     
       <section class = "middle-col flex-column">
-        <%= render './layouts/frontmenu' %>
+      <div class="front-menu flex-row ">
+      <a href="<%= root_path %>">  
+          <span id="view-opinions" class="menu-title font-fam flex-row flex">OPINIONS</span>
+      </a> 
+      
+      
+      </div>
+
         <%= render './layouts/opinion' %>
         
         <section class="opinions-section flex-column flex">
@@ -42,9 +49,7 @@
                <h1> <%= link_to user.fullname, user_path(user) %> </h1>
                
               </div>
-              <% if @last_follower %>
-               <p> Followed by <%= @last_follower.fullname %> </p>  
-              <% end %>            
+                        
               </div>
           </article>
           <% end %>
