--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,18 +3,49 @@
 <%= render './layouts/left' %>
 
 <section class = "middle-col flex-column">
-  
-  <picture class = "back-img">
-    <% if @user.coverimage %>
-      <%= image_tag(@user.coverimage_url.to_s, width: "100%", height: "100%") %>       
-    <% end %>
-    <%= link_to 'Edit' %>
-  </picture>  
+ 
 
-  <%= render './layouts/frontmenu'%>
-  <%= render './layouts/lists'%>
+<div class="front-menu flex-row ">
+<a href="<%= root_path %>">  
+    <span id="view-opinions" class="menu-title font-fam flex-row flex">OPINIONS</span>
+</a> 
+
+
+</div>
+
+<div id="lists" class="opinions-section flex flex-column ">
+<span class="opinions-title font-fam"> LISTS </span>     
+
+<% @users.each do |user| %>
+    <% unless user == current_user %> 
+    <article class="opinion-story flex-row">
+     <div class="opinion-profile img-div">
+      <% if user.photo %>
+      <%= image_tag(user.photo_url.to_s) %> 
+      <% end %>
+     </div>
+     <div class = "opinion-body font-fam w-100">
+        <div class="flex-column space-between w-100">
+         <h1> <%= link_to user.fullname, user_path(user) %> </h1>
+         <p> @ <%= user.username %> </p>         
+        </div>                      
+      </div>
+      <% if current_user.follow?(user) %>
+        <a href= "<%= unfollow_user_path(user) %>">        
+          <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
+        </a>
+      <% else %>
+        <a href= "<%= follow_user_path(user) %>">
+          <span class="iconify font-1p5" data-icon="carbon:add-alt" data-inline="false"></span>
+        </a>
+      <% end %>
+      
+    </article>
+    <% end %>
+  <% end %>
+
+  <div>
   
   
 </section>
 
-<%= render 'usershowright' %>
