--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,14 +91,31 @@
     height: fit-content;
     background-color: #F5F6F8;
 }
- // body 
 
-//  body {
-//      width: 768px;
-//  }
+.sticky-top {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+}
 
+.sticky-bottom {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    bottom: 0;
+}
 
-// 
+.fixed {
+    position: fixed;
+    top: 0;
+}
+
+.relative {
+    position: relative;
+}
+
+absolute {
+    position: absolute;
+}
 
  .main-nav {    
     width: 100%;
@@ -159,7 +176,7 @@
  .front {
      width: 100%;
      height: 800px;         
-
+    overflow-y: auto;
     .left-col {
         width:17%;
         background-color: #213246;
@@ -194,7 +211,8 @@
 
     .middle-col {
         width: 60%;
-        background-color: #F5F6F8;        
+        background-color: #F5F6F8; 
+        overflow-y: auto;       
         .back-img {
             width: 100%;
             height: 15rem;
@@ -265,7 +283,7 @@
                     }
                 }
                 .form-actions {
-                    // visibility: hidden;
+                    visibility: show;
                 }
             }             
         }
@@ -293,7 +311,7 @@
                 .opinion-profile {
                     width: 4rem;
                     height: 4rem;
-                    background-color: red;
+                    background-color: gray;
                 }
                 .opinion-body {                    
                     margin-left: 1rem;                    
@@ -371,13 +389,14 @@
                 .who-to-profile {
                     width: 4rem;
                     height: 4rem;
-                    background-color: red;
+                    background-color: gray;
                     border-radius: 2rem;
                     margin-right: 1rem;
                 }
                 .who-to-body {
                     width: 70%;
-                    .name-follow-wrapper{                                             
+                    .name-follow-wrapper{  
+                        visibility: show;                                           
                     }
                 }
             }    
