--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
   
-    <header>
+    <header class="w-100">
       <nav class= "main-nav flex-row">       
         <div class="nav-left flex-row flex">
         <% if current_user %>
@@ -66,48 +66,7 @@
     <% end %>
     
     <%= yield %>
-
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous">
-    </script>
-
-    <script>
-    $(document).ready(function(){
-
-      $('#view-followers').on('click', function() {
-        $('#followers').show()
-        $('#opinions-section').hide()        
-        $('#followings').hide()
-        $('#lists').hide()
-      });
-
-      $('#view-opinions').on('click', function() {
-        $('#opinions-section').show()
-        $('#followers').hide()
-        $('#followings').hide()
-        $('#lists').hide()
-      });     
-
-      $('#view-followings').on('click', function() {
-        $('#followings').show()
-        $('#opinions-section').hide()
-        $('#followers').hide()  
-        $('#lists').hide()      
-      });
-
-      $('#view-lists').on('click', function() {
-        $('#followings').hide()
-        $('#opinions-section').hide()
-        $('#followers').hide()  
-        $('#lists').show()      
-      });
-        
-    });  
-      
-      
-    </script>
+    
   
   </body>
 
