- re-visits models and contollers and make changes for N+1 quuery problems - Writes a detailed readme

--- a/app/views/users/_usershowopinion.html.erb
+++ b/app/views/users/_usershowopinion.html.erb
@@ -1,6 +1,6 @@
 <section id="opinions-section" class="opinions-section flex flex-column">
     <span class="opinions-title font-fam"> ALL OPINIONS </span>
-    <% @user.opinions.each do |opinion| %>
+    <% @user_opinions.each do |opinion| %>
       <article class="opinion-story flex-row">
       <div class="opinion-profile img-div">
       <% if @user.photo %>
