more N+1 query problems addressed

--- a/app/views/users/_usershowopinion.html.erb
+++ b/app/views/users/_usershowopinion.html.erb
@@ -9,7 +9,7 @@
      </div>
       <div class = "opinion-body font-fam w-100">
         <div class="flex-row space-between w-100">
-          <h1> <%= link_to opinion.author.fullname, user_path(opinion.author) %> </h1>
+          <h1> <%= link_to @user.fullname, user_path(opinion.author) %> </h1>
           <p class='opinion-date'> <%= opinion.created_at.strftime("%H") %> h </p>
         </div>
         <p> <%= opinion.text %> </p>
