--- a/app/views/layouts/_followings.html.erb
+++ b/app/views/layouts/_followings.html.erb
@@ -16,7 +16,7 @@
        <p> @ <%= user.username %> </p>         
       </div>                      
     </div>
-    <% if current_user.follow?(user) %>
+    <% if @current_user_followings.include?(user) %>
       <a href= "<%= unfollow_user_path(user) %>">        
         <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
       </a>
@@ -27,9 +27,7 @@
     <% end %>      
   </article>
   <% end %>
-<% end %>
-
- 
+<% end %> 
 
 
   
