--- a/app/views/users/_usershowright.html.erb
+++ b/app/views/users/_usershowright.html.erb
@@ -2,7 +2,7 @@
   <div class="show-profile" >
         <div class="show-article flex flex-column">
             <div class="photo-wrapper flex-row flex">
-              <% if current_user.follow?(@user) %>
+              <% if @current_user_followings.include?(@user) %>
                 <a href="<%= unfollow_user_path(@user) %>">        
                   <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
                 </a>
@@ -27,15 +27,15 @@
 
         <div class="show-following flex-row">
             <div class="follow-nums flex-column flex">
-                <span> <%= @user.opinions.count %> </span>
+                <span> <%= @user_opinions.count %> </span>
                 <p>Opinions</p>
             </div>
             <div class="follow-nums flex-column flex middle">
-                <span> <%= @user.followeds.count %> </span>
+                <span> <%= @followings.count %> </span>
                 <p>Followings</p>
             </div>
             <div class="follow-nums flex-column flex">
-                <span> <%= @user.followers.count %></span>
+                <span> <%= @followers.count %></span>
                 <p>Followers</p>
             </div>
         </div>
@@ -44,7 +44,7 @@
     <span>FOLLOWED BY</span>          
   </div>
   <div  class="who-to-section flex-column flex">
-  <% @user.followers.each do |user| %>
+  <% @followers.each do |user| %>
     <% unless user == @user %> 
     <article class="who-to-story flex-row">
      <div class="who-to-profile img-div">
@@ -59,7 +59,7 @@
         </div>
                       
       </div>
-      <% if current_user.follow?(user) %>
+      <% if @current_user_followings.include?(user) %>
         <a href="<%= unfollow_user_path(user) %>">        
           <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
         </a>
