--- a/app/views/layouts/_frontmenu.html.erb
+++ b/app/views/layouts/_frontmenu.html.erb
@@ -1,6 +1,6 @@
 <div class="front-menu flex-row ">
 <a href="<%= user_path(@user) %>">  
-    <span id="view-opinions" class="menu-title font-fam flex-row flex">OPINIONS</span>
+    <span id="view-opinions" class="menu-title font-fam flex-row flex" class="hov">OPINIONS</span>
 </a> 
 
 <a href="<%= following_user_path(@user) %>">
@@ -9,7 +9,6 @@
 <a href="<%= followers_user_path(@user) %>">
     <span id = "view-followers" class="menu-title font-fam flex-row flex">FOLLOWERS</span>
 </a>
-
 
 <a href="<%= users_path %>">
     <span id = "view-lists" class="menu-title font-fam flex-row flex">LISTS</span>
